--- a/Book_Shop/packages.config
+++ b/Book_Shop/packages.config
@@ -16,4 +16,5 @@
   <package id="System.Threading.Channels" version="8.0.0" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
+  <package id="WPF-UI" version="3.0.0-preview.1" targetFramework="net471" />
 </packages>
