--- a/Book_Shop/Book_Shop.csproj
+++ b/Book_Shop/Book_Shop.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Data\Book.cs" />
     <Compile Include="Data\User.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
